--- a/styles/main.css
+++ b/styles/main.css
@@ -1,200 +1,214 @@
-/*---------------- header------------------------------------------- */
-.transparent_nav
-{
-    height:90vh;
-    background-image: url(../img/billboard.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
 }
 
-.nav_bar
+.transparent_nav
 {
-    background-color: rgba(216, 208, 208,0.7);
+    background-color: rgb(252, 244, 244);
     position: fixed;
-    right: 0;
+    opacity: 0.5;
+    padding: 8px 10%;
+    display: flex;
     width: 100%;
-    display: flex;
+    height: 100px;
+    margin-left: 1vw;
+    justify-content: space-between;
 }
-#nav_list
-{
-    color: rgba(0, 0, 0, 0.418);
-    margin-left: 400px;
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 30px;
+
+.logo {
+    cursor: pointer;
 }
-#logo
-{
-    margin-left: 200px;
-    height: 40%;
+
+#nav_list {
+    list-style: none;
 }
-#nav_item_4
-{
-    margin-right: 200px;
+
+#nav_list li {
+    display: inline-block;
+    padding: 0px 15px;
 }
-.nav_item
-{
-    margin-right: 20px;
-    font-weight: bold;
+
+#nav_list li a {
+    
+    color: rgba(0, 0, 0, 0.966);
     font-size: 15px;
 }
-.cta
-{
-    background-color: rgba(216, 208, 208,0.7);
-    position: absolute;
-    top:81vh;
+
+#nav_list li a:hover {
+    color: blue;
+}
+
+li, a {
+    
+    font-weight: 500;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.986);
+    text-decoration: none;
+}
+/* Billboard */
+
+.billboard > img {
     width: 100%;
-    padding: 10px;
+    height: 90vh;
+    overflow: hidden;
 }
-#cta_text
-{
-    float: left;
-    font-size: 20px;
-    margin-left: 25px;
+
+
+
+/* cta */
+
+
+.cta {
+    
+    background-color: rgb(219, 203, 203);
+    padding: 10px 10%;
+    display: flex;
+    width: 1200px;
+    height: 60px;
+    margin-left: 15vw;
 }
+
+.cta:hover {
+    background-color: lightgrey;
+}
+
+.cta p {
+    display: inline-block;
+}
+
+.cta a {
+    display: inline-block;
+}
+
 #cta_link
 {
-    /* margin-top: 15px; */
-    margin-right: 40px;
-    float:right;
+    margin-left: auto;
     text-decoration: none;
     padding: 10px;
     background-color:rgba(7, 184, 243, 0.7);
     color: white;
-    box-shadow: 10px 10px 5px grey;
     border-radius: 5px;
 }
-#cta_link:hover
-{
-    background-color:rgba(3, 26, 34, 0.7);  
-    color: white;
-    box-shadow: none;
-}
-/*---------------- header------------------------------------------- */
 
-.service
-{
-    text-align: center;
-    font-size: 24px;
-    margin-top: 50px;
+/* Services */
+
+.services {
+    padding: 100px 100px;
+    background: #fbfbfb;
 }
-.service_title
-{
+
+.services h2{
+    color: #606060;
+    font-size: 30px;
+    font-weight: bold;
     text-align: center;
 }
-.separator
-{
-    display: flex;
-    margin-top: 10px;
-    justify-content: center;
-}
-.service_item
-{
-    
-    display: flex;
-    justify-content: space-evenly;
-    margin-left: 30px;
-    margin-top: auto;
-}
 
-
-.desc > p{
-
-    display: flex;
-    justify-content: space-evenly;
-    margin-left: 120px;
-    margin-right: 60px;
+.separator{
     text-align: center;
-    margin-top: 10px;
+    margin: 20px 0;
 }
-.desc > h1
-{
-    
+
+.services ul{
     display: flex;
-    justify-content: space-evenly;
-    margin-left: 60px;
-    margin-right: 60px;
+    justify-content: space-between;
+    list-style: none;
+    overflow: hidden;
+}
+
+.services ul li{
+    width: 293px;
+    height: auto;
     text-align: center;
-    margin-top: 10px;
 }
 
-/*----------------------recent work---------------------------------*/
-.recent_work
-{
-    display: flex;
-    margin-top: 30px;
- 
-}
-.project
-{
-    width: 20vw;
-    height: 35vh;
-}
-/*----------------------recent work---------------------------------*/
-
-
-/*----------------------testimonial------------------------------- */
-
-.person
-{
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-left: 40%;
-}
-
-.testimonial
-{
-    display: flex;
-    justify-content: center;
-}
-#testimonials_wrapper
-{
-    width: 80%;
-    margin-left:10%;
-}
-#testimonial_title
-{
-    /* text-align: center; */
+.services ul li img.s_icons{
     margin-bottom: 40px;
-    margin-left: 45%;
 }
-.person_img
-{
+
+.services ul li p{
+    color: #746969;
+    font-size: 14px;
+    line-height: 22px;
+}
+
+
+/* image gallery */
+
+.recent_work img {
+    width: 20%;
+    
+}
+
+.recent_work {
     display: flex;
     justify-content: center;
-    height: 80px;
 }
-.person_name 
-{
-    text-align: center;
-    margin-top: 10px;
-}
-.person_disc
-{
-    text-align: center;
-    margin-top: 10px;
-}
-.testimonial_1
-{
-    margin:15px;
-}
-/*----------------------testimonial------------------------------- */
 
+.recent_work img:hover {
+    opacity: 0.7;
+}
 
-/*----------------------- brand----------------------------------  */
-#brand
-{
-    margin: 20px 0 0 0;
-    padding: 20px 0 20px 0;
+/* Testimonials */
+
+.testimonials {
+ 
+    background: #f1f1f1;  
+    text-align: center;
+    width: 800px;
+    margin: auto;
+    overflow: hidden;
     display: flex;
-    justify-content: space-evenly;
-    background-color: lightslategray;
+    justify-content: center;
 }
-/*----------------------- brand----------------------------------  */
 
-/*------------------------ footer-------------------------------- */
+.testimonials > h1 {
+    text-align: center;
+    padding: 100px;
+}
 
+.testimonials > ul{
+
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
+}
+
+.t-li > li {
+    
+    text-decoration: none;
+    display: inline-block;
+    max-width: 250px;
+
+}
+
+.t-col {
+    flex: 33.33%;
+    padding: 15px;
+}
+
+.testimonial {
+    background: #fff;
+    padding: 30px;
+}
+
+.testimonial img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.t-name {
+    font-size: 15px;
+    margin: 20px 0;
+}
+
+/* footer */
 
 .footer{
     background: black;
@@ -202,10 +216,11 @@
 }
 #quote
 {
-    background-color: 	#686868;
-    padding: 10px;
+    background-color: rgb(219, 203, 203);
+    padding: 10px 10%;
     display: flex;
-    width: 70vw;
+    width: 1200px;
+    height: 60px;
     margin-left: 15vw;
 }
 #getintouch
@@ -218,34 +233,37 @@
     border-radius: 5px;
 }
 
-.footer_1
-{
-    color: white;
-    height: 50px;
-}
-.footer_1 > h1
-{
-    font-size: 25px;
-    margin-bottom: 20px;
-}
-.footer_1 >p{
-    line-height: 2;
-}
-
-.footer_component
-{
+.footer_widget {
     display: flex;
-    justify-content: space-evenly;
-    margin-left: 5vw;
-    margin-top: 30px;
+    justify-content: space-around;
+    background-color: #353535;
+    color: white;
+
 }
 
-.rights
-{
-    color: white;
-    position: relative;
-    top: 170px;
-    margin-left: 40vw;
-    padding-bottom: 10px;
+.footer_widget > div {
+    width: 200px;
+    padding: 25px;
 }
-/*------------------------ footer-------------------------------- */
+
+.footer_widget > div > h1 {
+    padding: 10px 0;
+    font-size: 20px;
+}
+
+#comp_list > li, a {
+    color: white;
+    padding: 5px 0;
+}
+
+#sup_list > li, a {
+    color: white;
+    padding: 5px 0;
+}
+
+.rights {
+    background-color: #353535;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
